Added missing previous events.

--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -1,10 +1,70 @@
 <div class="container">
-  <h4 class="title">Eventos previos del 2020</h4>
+  <h4 class="title">Eventos previos</h4>
   <div class="row">
     <div class="col s12 m10 p-0">
       <p class="description-text">
         Estaremos organizando eventos previos donde podrás conocer a muchas chicas que estarán compartiendo su experiencia
         creando juegos.
+      </p>
+    </div>
+  </div>
+  <div class="row center-align">
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top first-meetup"></div>
+        <div class="event-border event-border-left first-meetup"></div>
+        <div class="event-border event-border-bottom first-meetup"></div>
+        <div class="event-border event-border-right first-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/first.png" alt="meetup">
+          </div>
+          <div class="col s12 mt-2">
+            <a class="nes-btn first-meetup ml-1" href="//youtu.be/ETyyMMeSm2E" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
+            </a>
+          </div>
+        </div>
+        <div class="event-details first-meetup valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">PRESS START</p>
+            <p class="m-0 white-text">1er Meetup</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top second-meetup"></div>
+        <div class="event-border event-border-left second-meetup"></div>
+        <div class="event-border event-border-bottom second-meetup"></div>
+        <div class="event-border event-border-right second-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/second.png" alt="meetup">
+          </div>
+          <div class="col s12 mt-2">
+            <a class="nes-btn second-meetup ml-1" href="//youtu.be/4tH5V6qmntE" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
+            </a>
+          </div>
+        </div>
+        <div class="event-details second-meetup valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">LEVEL 1</p>
+            <p class="m-0 white-text">2do Meetup</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <h5 class="title title--small">Meetups del 2020</h5>
+  <div class="row">
+    <div class="col s12 m10 p-0">
+      <p class="description-text">
+        ¿Te perdiste los eventos del año pasado? No te preocupes, puedes revivirlos aquí.
       </p>
     </div>
   </div>
