--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -6,7 +6,7 @@
           <img class="mb-2 logo" src="assets/images/logo.svg" alt="woman game jam bolivia">
         </div>
         <div class="col offset-m3 m6">
-          <img class="characters pb-2" src="assets/images/banner-characters.svg" alt="personajes pixelados">
+          <img class="characters pb-2" src="assets/images/banner-characters-{{ randomSuffix }}.svg" alt="personajes del women game jam bolivia">
           <h3 class="white-text invitation-text">
             Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
             creando tus propios juegos
@@ -15,9 +15,7 @@
             Del 20 al 22 de Agosto del 2021
           </h3>
           <div class="mt-1">
-            <a href="https://bit.ly/WGJES" target="_blank" rel="noopener noreferrer">
-              <img src="assets/images/register.svg" class="button-signup" alt="inscríbete">
-            </a>
+            <wgj-register-button></wgj-register-button>
           </div>
         </div>
       </div>
@@ -31,6 +29,6 @@
     </div>
   </div>
   <div wgjParallax class="parallax">
-    <img src="assets/images/background.svg" alt="cielo de noche">
+    <img src="assets/images/background.png" alt="cielo de noche">
   </div>
 </div>
