--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -3,13 +3,16 @@
   <div class="row">
     <div class="col s12 offset-m3 m6 mt-1">
       <p class="description-text">
-        Estamos muy contentos de contar con el apoyo de grandes comunidades tecnológicas de toda Bolivia.
+        Estamos muy contentos de contar con el apoyo de grandes comunidades tecnológicas.
       </p>
     </div>
   </div>
   <div class="community-logos w-100 pb-3">
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/gp4tech.svg" alt="logo girl power for technology">
+      <img src="assets/images/communities/gdg.svg" height="50" alt="logo de google developer groups">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/gp4tech.svg" alt="logo de girl power for technology">
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/angular-bolivia.svg" alt="logo de angular bolivia">
@@ -23,6 +26,12 @@
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/mi-maker-house.svg" alt="logo de mi maker house">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/mujeres-tics.png" alt="logo de mi mujeres tics">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/mentor-her.jpg" alt="logo de mi mentor her">
     </div>
   </div>
 </div>
