--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -59,6 +59,56 @@
         </div>
       </div>
     </div>
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top third-meetup"></div>
+        <div class="event-border event-border-left third-meetup"></div>
+        <div class="event-border event-border-bottom third-meetup"></div>
+        <div class="event-border event-border-right third-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/third.png" alt="meetup">
+          </div>
+          <div class="col s12 mt-2">
+            <a class="nes-btn third-meetup ml-1" href="//youtu.be/XyVTTvkTCkg" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
+            </a>
+          </div>
+        </div>
+        <div class="event-details third-meetup valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">LEVEL 2</p>
+            <p class="m-0 white-text">3er Meetup</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m4 mb-2">
+      <div class="event">
+        <div class="event-border event-border-top first-meetup"></div>
+        <div class="event-border event-border-left first-meetup"></div>
+        <div class="event-border event-border-bottom first-meetup"></div>
+        <div class="event-border event-border-right first-meetup"></div>
+        <div class="row p-1">
+          <div class="col s12 mt-2">
+            <img src="assets/images/fourth.jpg" alt="meetup">
+          </div>
+          <div class="col s12 mt-2">
+            <a class="nes-btn first-meetup ml-1" href="//youtu.be/Z9GpMjwt434" target="_blank"
+              rel="noopener noreferrer">
+              Ver video
+            </a>
+          </div>
+        </div>
+        <div class="event-details first-meetup valign-wrapper">
+          <div class="w-100 my-1">
+            <p class="m-0 white-text">CHECKPOINT</p>
+            <p class="m-0 white-text">4to Meetup</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <h5 class="title title--small">Meetups del 2020</h5>
   <div class="row">
