--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -33,5 +33,8 @@
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/mentor-her.jpg" alt="logo de mi mentor her">
     </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/pyladies.svg" alt="logo de pyladies">
+    </div>
   </div>
 </div>
