Added logos from adevi and mujeres tics.

--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -28,13 +28,16 @@
       <img src="assets/images/communities/mi-maker-house.svg" alt="logo de mi maker house">
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/mujeres-tics.png" alt="logo de mi mujeres tics">
+      <img src="assets/images/communities/mujeres-tics.svg" alt="logo de mi mujeres tics">
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/mentor-her.jpg" alt="logo de mi mentor her">
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/pyladies.svg" alt="logo de pyladies">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/adevi.svg" alt="logo de adevi">
     </div>
   </div>
 </div>
