Added logos and svg avatar seal

--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -39,5 +39,17 @@
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
       <img src="assets/images/communities/adevi.svg" alt="logo de adevi">
     </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/TECHKIDS.png" alt="logo de TECHKIDS">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/MentorLab.svg" alt="logo de Mentor Lab">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/CientificasDeDatosBolivia.png" alt="logo de Cientificas De Datos Bolivia">
+    </div>
+    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+      <img src="assets/images/communities/Aurockra.png" alt="logo de Aurockra">
+    </div>
   </div>
 </div>
