--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -3,13 +3,21 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          <img class="mb-2 logo" src="assets/images/logo.svg" alt="woman game jam bolivia">
+          <img
+            class="mb-2 logo"
+            src="assets/images/logo.svg"
+            alt="woman game jam bolivia"
+          />
         </div>
         <div class="col offset-m3 m6">
-          <img class="characters pb-2" src="assets/images/banner-characters-{{ randomSuffix }}.svg" alt="personajes del women game jam bolivia">
+          <img
+            class="characters pb-2"
+            src="assets/images/banner-characters-{{ randomSuffix }}.svg"
+            alt="personajes del women game jam bolivia"
+          />
           <h3 class="white-text invitation-text">
-            Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas
-            creando tus propios juegos
+            Participa y desarrolla tu creatividad e imaginación en un Game Jam
+            online junto a más chicas creando tus propios juegos
           </h3>
           <h3 class="event-date invitation-text">
             Del 20 al 22 de Agosto del 2021
@@ -24,11 +32,15 @@
   <div class="w-100 pb-2 organizers">
     <div class="row">
       <div class="col s12 px-2 center-align">
-        <img class="organizers-image" src="assets/images/banner-organizers.svg" alt="women techmakers cochabamba">
+        <img
+          class="organizers-image"
+          src="assets/images/banner-organizers.svg"
+          alt="women techmakers cochabamba"
+        />
       </div>
     </div>
   </div>
   <div wgjParallax class="parallax">
-    <img src="assets/images/background.png" alt="cielo de noche">
+    <img src="assets/images/background.png" alt="cielo de noche" />
   </div>
 </div>
