--- a/src/app/home/global-community/global-community.component.html
+++ b/src/app/home/global-community/global-community.component.html
@@ -1,11 +1,20 @@
 <div class="container center-align py-6">
-  <img class="max-w-100" src="assets/images/global-community.svg" alt="computadora portátil">
+  <img
+    class="max-w-100"
+    src="assets/images/global-community.svg"
+    alt="computadora portátil"
+  />
   <div class="row">
     <div class="col s12 offset-m2 m8 mt-1">
       <h4 class="title">Conoce la comunidad Global de Women Game Jam</h4>
     </div>
     <div class="col s12">
-      <a class="featured-link" href="//www.womengamejam.org" target="_blank" rel="noopener noreferrer">
+      <a
+        class="featured-link"
+        href="//www.womengamejam.org"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         www.womengamejam.org
       </a>
     </div>
