--- a/src/app/home/our-goal/our-goal.component.html
+++ b/src/app/home/our-goal/our-goal.component.html
@@ -2,37 +2,40 @@
   <div class="center-align container">
     <div class="row">
       <div class="col offset-m2 m8">
-        <img src="assets/images/heart.svg" alt="corazón">
+        <img src="assets/images/heart.svg" alt="corazón" />
         <h4 class="title">Nuestro Objetivo</h4>
         <p class="description-text">
-          Women Game Jam tiene la intención de brindar más visibilidad, incentivar y crear redes de contacto para los
-          participantes que trabajan o desean trabajar en la industria de los videojuegos.
+          Women Game Jam tiene la intención de brindar más visibilidad,
+          incentivar y crear redes de contacto para los participantes que
+          trabajan o desean trabajar en la industria de los videojuegos.
         </p>
       </div>
       <div class="col offset-m2 m8 left-align">
         <div class="row my-2">
-          <img src="assets/images/star.svg" class="col" alt="estrella">
+          <img src="assets/images/star.svg" class="col" alt="estrella" />
           <p class="text-section col">
-            Estimular en las mujeres el sentido de pertenencia a la comunidad de desarrolladores de juegos locales.
+            Estimular en las mujeres el sentido de pertenencia a la comunidad de
+            desarrolladores de juegos locales.
           </p>
         </div>
         <div class="row my-2">
-          <img src="assets/images/star.svg" class="col" alt="estrella">
+          <img src="assets/images/star.svg" class="col" alt="estrella" />
           <p class="text-section col">
-            Hacer posible que las mujeres que ya están o quieren estar en la industria del juego se conozcan entre sí.
+            Hacer posible que las mujeres que ya están o quieren estar en la
+            industria del juego se conozcan entre sí.
           </p>
         </div>
         <div class="row my-2">
-          <img src="assets/images/star.svg" class="col" alt="estrella">
+          <img src="assets/images/star.svg" class="col" alt="estrella" />
           <p class="text-section col">
             Presentar el trabajo de estas mujeres a la industria.
           </p>
         </div>
         <div class="row my-2">
-          <img src="assets/images/star.svg" class="col" alt="estrella">
+          <img src="assets/images/star.svg" class="col" alt="estrella" />
           <p class="text-section col">
-            Crear un entorno amigable y un espacio de intercambio de experiencias para principiantes o desarrolladoras
-            con experiencia.
+            Crear un entorno amigable y un espacio de intercambio de
+            experiencias para principiantes o desarrolladoras con experiencia.
           </p>
         </div>
       </div>
