--- a/src/styles.addevent.scss
+++ b/src/styles.addevent.scss
@@ -77,37 +77,44 @@
 }
 
 .addeventatc_dropdown .ateappleical {
-  background: url('https://www.addevent.com/gfx/icon-apple-t5.svg') 18px 40% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-apple-t5.svg') 18px 40%
+    no-repeat;
   background-size: 22px 100%;
 }
 
 .addeventatc_dropdown .ategoogle {
-  background: url('https://www.addevent.com/gfx/icon-google-t5.svg') 18px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-google-t5.svg') 18px 50%
+    no-repeat;
   background-size: 22px 100%;
 }
 
 .addeventatc_dropdown .ateoffice365 {
-  background: url('https://www.addevent.com/gfx/icon-office365-t5.svg') 19px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-office365-t5.svg') 19px 50%
+    no-repeat;
   background-size: 18px 100%;
 }
 
 .addeventatc_dropdown .ateoutlook {
-  background: url('https://www.addevent.com/gfx/icon-outlook-t5.svg') 18px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-outlook-t5.svg') 18px 50%
+    no-repeat;
   background-size: 22px 100%;
 }
 
 .addeventatc_dropdown .ateoutlookcom {
-  background: url('https://www.addevent.com/gfx/icon-outlookcom-t5.svg') 18px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-outlookcom-t5.svg') 18px
+    50% no-repeat;
   background-size: 22px 100%;
 }
 
 .addeventatc_dropdown .ateyahoo {
-  background: url('https://www.addevent.com/gfx/icon-yahoo-t5.svg') 18px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-yahoo-t5.svg') 18px 50%
+    no-repeat;
   background-size: 22px 100%;
 }
 
 .addeventatc_dropdown .atefacebook {
-  background: url('https://www.addevent.com/gfx/icon-facebook-t5.svg') 18px 50% no-repeat;
+  background: url('https://www.addevent.com/gfx/icon-facebook-t5.svg') 18px 50%
+    no-repeat;
   background-size: 22px 100%;
 }
 
