--- a/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
+++ b/src/app/home/avatar-generator/attribute-selector/attribute-selector.component.html
@@ -4,9 +4,17 @@
   <div [innerHTML]="getIcon() | safeHtml"></div>
 </div>
 
-<div #decoratorModal=modalDirective wgjModal class="modal nes-dialog is-rounded">
+<div
+  #decoratorModal="modalDirective"
+  wgjModal
+  class="modal nes-dialog is-rounded"
+>
   <ng-container *ngIf="decorator">
-    <button type="button" class="nes-btn is-error close-btn white-text" (click)="decoratorModal.close()">
+    <button
+      type="button"
+      class="nes-btn is-error close-btn white-text"
+      (click)="decoratorModal.close()"
+    >
       X
     </button>
     <form method="dialog">
@@ -20,13 +28,17 @@
             <label class="description-text black-text" for="favcolor">
               Puedes cambiar el color 🎨 aquí:
             </label>
-            <input type="color" name="favcolor" [(ngModel)]="color">
+            <input type="color" name="favcolor" [(ngModel)]="color" />
           </div>
           <div class="row">
             <div *ngFor="let item of decorator.options" class="col s4 m3">
               <div class="card grey lighten-3">
-                <div class="bg-item" (click)="selectItem(item)" [class.selectedItem]="item === decorator.currentValue"
-                  [innerHTML]="getPreviewItem(item) | safeHtml"></div>
+                <div
+                  class="bg-item"
+                  (click)="selectItem(item)"
+                  [class.selectedItem]="item === decorator.currentValue"
+                  [innerHTML]="getPreviewItem(item) | safeHtml"
+                ></div>
               </div>
             </div>
           </div>
