--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -3,53 +3,93 @@
   <div class="row">
     <div class="col s12 offset-m3 m6 mt-1">
       <p class="description-text">
-        Estamos muy contentos de contar con el apoyo de grandes comunidades tecnológicas.
+        Estamos muy contentos de contar con el apoyo de grandes comunidades
+        tecnológicas.
       </p>
     </div>
   </div>
   <div class="community-logos w-100 pb-3">
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/gdg.svg" height="50" alt="logo de google developer groups">
+      <img
+        src="assets/images/communities/gdg.svg"
+        height="50"
+        alt="logo de google developer groups"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/gp4tech.svg" alt="logo de girl power for technology">
+      <img
+        src="assets/images/communities/gp4tech.svg"
+        alt="logo de girl power for technology"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/angular-bolivia.svg" alt="logo de angular bolivia">
+      <img
+        src="assets/images/communities/angular-bolivia.svg"
+        alt="logo de angular bolivia"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/flutter-cochabamba.svg" alt="logo de flutter cochabamba">
+      <img
+        src="assets/images/communities/flutter-cochabamba.svg"
+        alt="logo de flutter cochabamba"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/scesi.svg"
-        alt="logo de la sociedad científica de estudiantes de sistemas e informática">
+      <img
+        src="assets/images/communities/scesi.svg"
+        alt="logo de la sociedad científica de estudiantes de sistemas e informática"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/mi-maker-house.svg" alt="logo de mi maker house">
+      <img
+        src="assets/images/communities/mi-maker-house.svg"
+        alt="logo de mi maker house"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/mujeres-tics.svg" alt="logo de mi mujeres tics">
+      <img
+        src="assets/images/communities/mujeres-tics.svg"
+        alt="logo de mi mujeres tics"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/mentor-her.jpg" alt="logo de mi mentor her">
+      <img
+        src="assets/images/communities/mentor-her.jpg"
+        alt="logo de mi mentor her"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/pyladies.svg" alt="logo de pyladies">
+      <img
+        src="assets/images/communities/pyladies.svg"
+        alt="logo de pyladies"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/adevi.svg" alt="logo de adevi">
+      <img src="assets/images/communities/adevi.svg" alt="logo de adevi" />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/TECHKIDS.png" alt="logo de TECHKIDS">
+      <img
+        src="assets/images/communities/TECHKIDS.png"
+        alt="logo de TECHKIDS"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/MentorLab.svg" alt="logo de Mentor Lab">
+      <img
+        src="assets/images/communities/MentorLab.svg"
+        alt="logo de Mentor Lab"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/CientificasDeDatosBolivia.png" alt="logo de Cientificas De Datos Bolivia">
+      <img
+        src="assets/images/communities/CientificasDeDatosBolivia.png"
+        alt="logo de Cientificas De Datos Bolivia"
+      />
     </div>
     <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/Aurockra.png" alt="logo de Aurockra">
+      <img
+        src="assets/images/communities/Aurockra.png"
+        alt="logo de Aurockra"
+      />
     </div>
   </div>
 </div>
