--- a/src/app/home/previous-events/previous-events.component.html
+++ b/src/app/home/previous-events/previous-events.component.html
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="col s12 m10 p-0">
       <p class="description-text">
-        Estaremos organizando eventos previos donde podrás conocer a muchas chicas que estarán compartiendo su experiencia
-        creando juegos.
+        Estaremos organizando eventos previos donde podrás conocer a muchas
+        chicas que estarán compartiendo su experiencia creando juegos.
       </p>
     </div>
   </div>
@@ -17,11 +17,15 @@
         <div class="event-border event-border-right first-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/first.png" alt="meetup">
+            <img src="assets/images/first.png" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn first-meetup ml-1" href="//youtu.be/ETyyMMeSm2E" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn first-meetup ml-1"
+              href="//youtu.be/ETyyMMeSm2E"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -42,11 +46,15 @@
         <div class="event-border event-border-right second-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/second.png" alt="meetup">
+            <img src="assets/images/second.png" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn second-meetup ml-1" href="//youtu.be/4tH5V6qmntE" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn second-meetup ml-1"
+              href="//youtu.be/4tH5V6qmntE"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -67,11 +75,15 @@
         <div class="event-border event-border-right third-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/third.png" alt="meetup">
+            <img src="assets/images/third.png" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn third-meetup ml-1" href="//youtu.be/XyVTTvkTCkg" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn third-meetup ml-1"
+              href="//youtu.be/XyVTTvkTCkg"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -92,11 +104,15 @@
         <div class="event-border event-border-right first-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/fourth.jpg" alt="meetup">
+            <img src="assets/images/fourth.jpg" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn first-meetup ml-1" href="//youtu.be/Z9GpMjwt434" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn first-meetup ml-1"
+              href="//youtu.be/Z9GpMjwt434"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -114,7 +130,8 @@
   <div class="row">
     <div class="col s12 m10 p-0">
       <p class="description-text">
-        ¿Te perdiste los eventos del año pasado? No te preocupes, puedes revivirlos aquí.
+        ¿Te perdiste los eventos del año pasado? No te preocupes, puedes
+        revivirlos aquí.
       </p>
     </div>
   </div>
@@ -127,11 +144,15 @@
         <div class="event-border event-border-right first-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/first-meetup.svg" alt="meetup">
+            <img src="assets/images/first-meetup.svg" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn first-meetup ml-1" href="//youtu.be/sOkMeVxmxkc" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn first-meetup ml-1"
+              href="//youtu.be/sOkMeVxmxkc"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -152,11 +173,15 @@
         <div class="event-border event-border-right second-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/second-meetup.svg" alt="meetup">
+            <img src="assets/images/second-meetup.svg" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn second-meetup ml-1" href="//youtu.be/ei9RbnuG5RM" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn second-meetup ml-1"
+              href="//youtu.be/ei9RbnuG5RM"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
@@ -177,11 +202,15 @@
         <div class="event-border event-border-right third-meetup"></div>
         <div class="row p-1">
           <div class="col s12 mt-2">
-            <img src="assets/images/third-meetup.svg" alt="meetup">
+            <img src="assets/images/third-meetup.svg" alt="meetup" />
           </div>
           <div class="col s12 mt-2">
-            <a class="nes-btn third-meetup ml-1" href="//youtu.be/q3FjxXUD694" target="_blank"
-              rel="noopener noreferrer">
+            <a
+              class="nes-btn third-meetup ml-1"
+              href="//youtu.be/q3FjxXUD694"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               Ver video
             </a>
           </div>
