--- a/src/app/home/social-networks/social-networks.component.html
+++ b/src/app/home/social-networks/social-networks.component.html
@@ -2,8 +2,13 @@
   <div class="social-networks valign-wrapper">
     <div class="w-100 center-align">
       <span class="mx-1 title">Síguenos en</span>
-      <a class="nes-btn" href="//www.facebook.com/WGJBolivia/" target="_blank" rel="noopener noreferrer">
-        <img src="assets/images/fb-like.svg" alt="facebook">
+      <a
+        class="nes-btn"
+        href="//www.facebook.com/WGJBolivia/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img src="assets/images/fb-like.svg" alt="facebook" />
       </a>
     </div>
   </div>
