--- a/src/styles.variables.scss
+++ b/src/styles.variables.scss
@@ -1,6 +1,6 @@
 @import '~materialize-css/sass/components/color-variables';
 
-$primary-color: #250E59 !default;
+$primary-color: #250e59 !default;
 $primary-color-light: false !default;
 $primary-color-dark: false !default;
 
@@ -12,11 +12,11 @@ $primary-color-dark: false !default;
   $primary-color-dark: darken($primary-color, 15%);
 }
 
-$secondary-color: #5656AF !default;
-$call-to-action-color: #53E3B7 !default;
-$about-us-color: #16064C !default;
+$secondary-color: #5656af !default;
+$call-to-action-color: #53e3b7 !default;
+$about-us-color: #16064c !default;
 $text-color: #3d3d3d !default;
-$featured-color: #FF499E !default;
+$featured-color: #ff499e !default;
 $success-color: color('green', 'base') !default;
 $error-color: color('red', 'base') !default;
 $link-color: color('light-blue', 'darken-1') !default;
