--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,46 +1,28 @@
-<div wgjTransparentNavbar class="parallax-container valign-wrapper">
-  <div class="w-100 center-align">
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <img
-            class="mb-2 logo"
-            src="assets/images/logo.svg"
-            alt="woman game jam bolivia"
-          />
-        </div>
-        <div class="col offset-m3 m6">
-          <img
-            class="characters pb-2"
-            src="assets/images/banner-characters-{{ randomSuffix }}.svg"
-            alt="personajes del women game jam bolivia"
-          />
-          <h3 class="white-text invitation-text">
-            Participa y desarrolla tu creatividad e imaginación en un Game Jam
-            online junto a más chicas creando tus propios juegos
-          </h3>
-          <h3 class="event-date invitation-text">
-            Del 20 al 22 de Agosto del 2021
-          </h3>
-          <div class="mt-1">
-            <wgj-register-button></wgj-register-button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="w-100 pb-2 organizers">
-    <div class="row">
-      <div class="col s12 px-2 center-align">
+<div class="banner">
+  <div class="container">
+    <div class="banner__data__container">
+      <img
+        alt="women game jam logo"
+        class="banner__logo"
+        src="assets/images/2022/wgj.png"
+      />
+      <div class="banner__invitation">
+        <p> La aventura vuelve a comenzar del <b>19 al 21 de Agosto</b> </p>
+        <p>
+          Desarrolla tu creatividad e imaginación en esta <b>Game Jam online</b>
+        </p>
         <img
-          class="organizers-image"
-          src="assets/images/banner-organizers.svg"
-          alt="women techmakers cochabamba"
+          alt="bubble invitation background"
+          class="banner__invitation__bg"
+          src="assets/images/2022/invitation-bg.svg"
         />
+        <button class="banner__action-button"> ¡Quiero participar! </button>
       </div>
+      <img
+        alt="wtm and gdg cochabamba logos"
+        class="banner__organizer-logos"
+        src="assets/images/2022/organizers.png"
+      />
     </div>
-  </div>
-  <div wgjParallax class="parallax">
-    <img src="assets/images/background.png" alt="cielo de noche" />
   </div>
 </div>
