--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <wgj-banner></wgj-banner>
-<wgj-about-us></wgj-about-us>
-<wgj-communities></wgj-communities>
+<!-- <wgj-about-us></wgj-about-us> -->
+<!-- <wgj-communities></wgj-communities> -->
 <!-- <wgj-sponsors></wgj-sponsors> -->
-<wgj-our-goal></wgj-our-goal>
-<wgj-previous-events></wgj-previous-events>
-<wgj-global-community></wgj-global-community>
-<wgj-avatar-generator></wgj-avatar-generator>
-<wgj-social-networks></wgj-social-networks>
+<!-- <wgj-our-goal></wgj-our-goal> -->
+<!-- <wgj-previous-events></wgj-previous-events> -->
+<!-- <wgj-global-community></wgj-global-community> -->
+<!-- <wgj-avatar-generator></wgj-avatar-generator> -->
+<!-- <wgj-social-networks></wgj-social-networks> -->
