--- a/src/app/home/banner/banner.component.scss
+++ b/src/app/home/banner/banner.component.scss
@@ -1,33 +1,88 @@
-@import '../../../styles.variables';
+$main-color: #57280d;
 
-.logo {
-  max-width: 250px;
+.container {
+  height: 100%;
 }
 
-.characters {
-  max-width: 250px;
-}
-
-.parallax-container {
-  position: relative;
+.banner {
+  background-image: url('/assets/images/2022/banner00.png');
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
   height: 100vh;
   min-height: 750px;
-}
+  padding-top: 20px;
 
-.invitation-text {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.event-date {
-  color: $call-to-action-color;
-}
-
-.organizers {
-  position: absolute;
-  bottom: 0;
-
-  .organizers-image {
+  .banner__data__container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     max-width: 100%;
+    position: relative;
+    width: 532px;
+
+    .banner__logo {
+      max-width: 100%;
+    }
+
+    .banner__invitation {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      margin: 40px 0;
+      max-width: 100%;
+      height: 300px;
+      padding: 20px;
+      position: relative;
+
+      p {
+        color: $main-color;
+        font-size: 1.5rem;
+        line-height: normal;
+        text-align: center;
+      }
+
+      .banner__invitation__bg {
+        left: 0;
+        max-height: 100%;
+        max-width: 100%;
+        position: absolute;
+        top: 0;
+        z-index: -1;
+      }
+
+      .banner__action-button {
+        background-color: #f3a46a;
+        border: 2px solid $main-color;
+        border-radius: 20px;
+        color: $main-color;
+        font-size: 1.7rem;
+        font-weight: bold;
+        max-width: 100%;
+        min-height: 60px;
+        width: 300px;
+      }
+    }
+
+    .banner__organizer-logos {
+      bottom: 50px;
+      max-width: 100%;
+      position: absolute;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 100px;
+
+    .banner__data__container {
+      .banner__invitation {
+        padding: 30px 60px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    background-size: auto;
   }
 }
