Added registration link

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -16,7 +16,14 @@
           class="banner__invitation__bg"
           src="assets/images/2022/invitation-bg.svg"
         />
-        <button class="banner__action-button"> ¡Quiero participar! </button>
+        <a
+          class="banner__action-button"
+          href="https://bit.ly/ES_WGJ22"
+          rel="noreferrer"
+          target="_blank"
+        >
+          ¡Quiero participar!
+        </a>
       </div>
       <img
         alt="wtm and gdg cochabamba logos"
