--- a/src/styles.variables.scss
+++ b/src/styles.variables.scss
@@ -1,6 +1,6 @@
 @import '~materialize-css/sass/components/color-variables';
 
-$primary-color: #250e59 !default;
+$primary-color: #ffedcb !default;
 $primary-color-light: false !default;
 $primary-color-dark: false !default;
 
