Updated about-us section.

--- a/src/app/home/about-us/about-us.component.html
+++ b/src/app/home/about-us/about-us.component.html
@@ -1,12 +1,17 @@
-<div class="container pt-6">
-  <div class="row">
-    <div class="col s12 offset-m3 m6 center-align about-us">
-      <b>Women Game Jam</b>
-      <p
-        >Es un evento de 48 horas enfocado al público femenino. Un espacio con
-        un espíritu de creación, networking y colaboración entre todas las
-        participantes.</p
-      >
+<div class="container">
+  <div class="about-us">
+    <p class="about-us__title"> ¿Qué es Women Game Jam? </p>
+    <div class="about-us__content">
+      <img
+        class="about-us__kid"
+        src="assets/images/2022/kid-1.png"
+        alt="niña con dos controles"
+      />
+      <p class="about-us__description">
+        Women Game Jam es una <b>maratón de 48 horas</b> de desarrollo de
+        videojuegos. Un espacio con un espíritu de creación, networking,
+        colaboración entre <b>todas y todos los participantes</b>.
+      </p>
     </div>
   </div>
 </div>
