--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -12,7 +12,7 @@
           Desarrolla tu creatividad e imaginación en esta <b>Game Jam online</b>
         </p>
         <img
-          alt="bubble invitation background"
+          alt="burbuja amarilla"
           class="banner__invitation__bg"
           src="assets/images/2022/invitation-bg.svg"
         />
