--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <wgj-banner></wgj-banner>
-<!-- <wgj-about-us></wgj-about-us> -->
+<wgj-about-us></wgj-about-us>
 <!-- <wgj-communities></wgj-communities> -->
 <!-- <wgj-sponsors></wgj-sponsors> -->
 <!-- <wgj-our-goal></wgj-our-goal> -->
