--- a/src/app/home/about-us/about-us.component.scss
+++ b/src/app/home/about-us/about-us.component.scss
@@ -1,7 +1,61 @@
-@import '../../../styles.variables';
-
 .about-us {
-  font-size: 1.6rem;
-  font-style: italic;
-  color: $about-us-color;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 100px 0;
+  position: relative;
+
+  .about-us__title {
+    background-color: #f3a46a;
+    border-radius: 28px;
+    margin-bottom: -8px;
+    font-size: 1.7rem;
+    font-weight: bold;
+    text-decoration: underline;
+    padding: 6px 40px;
+    z-index: 1;
+
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      right: 0;
+      transform: rotate(5deg);
+    }
+  }
+
+  .about-us__content {
+    align-items: center;
+    border-radius: 50px;
+    background-color: #98dcd8;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 90% 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .about-us__kid {
+      margin-top: 10px;
+      max-width: 100%;
+      width: 160px;
+
+      @media screen and (min-width: 768px) {
+        margin-top: 0;
+      }
+    }
+
+    .about-us__description {
+      font-size: 1.5rem;
+      padding: 60px 30px;
+      text-align: center;
+
+      @media screen and (min-width: 768px) {
+        width: 60%;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      background-color: transparent;
+      background-image: url('/assets/images/2022/about-us-bg.png');
+    }
+  }
 }
