Added participants section.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <wgj-banner></wgj-banner>
 <wgj-about-us></wgj-about-us>
+<wgj-participants></wgj-participants>
 <!-- <wgj-communities></wgj-communities> -->
 <!-- <wgj-sponsors></wgj-sponsors> -->
 <!-- <wgj-our-goal></wgj-our-goal> -->
