--- a/src/app/home/avatar-generator/avatar-generator.component.html
+++ b/src/app/home/avatar-generator/avatar-generator.component.html
@@ -1,6 +1,6 @@
 <div class="center-align container">
   <div class="my-2">
-    <h4 class="title">Crea tu propio avatar</h4>
+    <p class="title">Crea tu propio avatar</p>
     <div class="row">
       <div class="col s12 offset-m2 m8">
         <p class="description-text">
@@ -19,13 +19,17 @@
   <div class="row">
     <div class="col s12 m6">
       <div #screen class="bg-image center px-2">
-        <img class="logo" src="assets/images/logo.svg" alt="cielo de noche" />
+        <img
+          class="logo"
+          src="assets/images/2022/wgj.png"
+          alt="cielo de noche"
+        />
         <div [innerHTML]="buildAvatarSvg() | safeHtml"></div>
       </div>
       <button
         (click)="downloadImage()"
         type="button"
-        class="nes-btn is-primary my-2"
+        class="avatar__download-button"
       >
         Descargar avatar
       </button>
