--- a/src/app/home/avatar-generator/avatar-generator.component.scss
+++ b/src/app/home/avatar-generator/avatar-generator.component.scss
@@ -1,6 +1,6 @@
 .bg-image {
-  background-image: url(../../../assets/images/background.svg);
-  background-position: center;
+  background-color: #98dcd8;
+  border-radius: 20px;
 }
 
 .logo {
@@ -8,4 +8,21 @@
   width: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.avatar__download-button {
+  align-items: center;
+  display: flex;
+  background-color: #f3a46a;
+  border: 2px solid #57280d;
+  border-radius: 20px;
+  color: #57280d;
+  font-size: 1.7rem;
+  font-weight: bold;
+  justify-content: center;
+  margin: 16px auto;
+  max-width: 100%;
+  min-height: 60px;
+  text-align: center;
+  width: 240px;
 }
