--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,9 +47,10 @@ a {
 }
 
 .title {
-  color: $primary-color;
-  font-size: 2.4285rem;
+  color: #57280d;
+  font-size: 2.5rem;
   font-weight: bold;
+  text-decoration: underline;
 
   &.title--small {
     font-size: 1.75rem;
@@ -57,7 +58,8 @@ a {
 }
 
 .description-text {
-  font-size: 1.285rem;
+  color: #57280d;
+  font-size: 1.5rem;
 }
 
 .nes-btn {
