--- a/src/app/home/previous-events/previous-events.component.scss
+++ b/src/app/home/previous-events/previous-events.component.scss
@@ -119,3 +119,19 @@
     }
   }
 }
+
+.container {
+  text-align: center;
+}
+
+.event-video-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+
+  iframe {
+    border: 6px solid #f3a46a;
+    max-width: 100%;
+  }
+}
