Enabled communities section.

--- a/src/app/home/communities/communities.component.html
+++ b/src/app/home/communities/communities.component.html
@@ -1,95 +1,86 @@
 <div class="container center-align pt-6 pb-1">
-  <h4 class="title">Comunidades amigas</h4>
-  <div class="row">
-    <div class="col s12 offset-m3 m6 mt-1">
-      <p class="description-text">
-        Estamos muy contentos de contar con el apoyo de grandes comunidades
-        tecnológicas.
-      </p>
+  <div class="communities">
+    <p class="title"> Organizadores del WGJ Bolivia y comunidades amigas </p>
+    <div class="row">
+      <div class="col s12 offset-m3 m6 mt-1">
+        <p class="description-text">
+          Estamos muy contentos de contar con el apoyo de grandes comunidades
+          tecnológicas.
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="community-logos w-100 pb-3">
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/gdg.svg"
-        height="50"
-        alt="logo de google developer groups"
-      />
+    <div class="community-logos w-100 pb-3">
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          class="organizer-img"
+          src="assets/images/2022/wtm-org.png"
+          alt="logo de women techmakers cochabamba"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          class="organizer-img"
+          src="assets/images/2022/gdg-org.png"
+          alt="logo de gdg cochabamba"
+        />
+      </div>
     </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/gp4tech.svg"
-        alt="logo de girl power for technology"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/angular-bolivia.svg"
-        alt="logo de angular bolivia"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/flutter-cochabamba.svg"
-        alt="logo de flutter cochabamba"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/scesi.svg"
-        alt="logo de la sociedad científica de estudiantes de sistemas e informática"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/mi-maker-house.svg"
-        alt="logo de mi maker house"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/mujeres-tics.svg"
-        alt="logo de mi mujeres tics"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/mentor-her.jpg"
-        alt="logo de mi mentor her"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/pyladies.svg"
-        alt="logo de pyladies"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img src="assets/images/communities/adevi.svg" alt="logo de adevi" />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/TECHKIDS.png"
-        alt="logo de TECHKIDS"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/MentorLab.svg"
-        alt="logo de Mentor Lab"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/CientificasDeDatosBolivia.png"
-        alt="logo de Cientificas De Datos Bolivia"
-      />
-    </div>
-    <div class="valign-wrapper mx-3 mx-sm-6 my-1">
-      <img
-        src="assets/images/communities/Aurockra.png"
-        alt="logo de Aurockra"
-      />
+    <div class="community-logos w-100 pb-3">
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/usiglo20.png"
+          alt="logo de universidad nacional siglo 20"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/virtual-life.png"
+          alt="logo de virtual life"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/ada-in-data.png"
+          alt="logo de ada in data"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/gp4tech.svg"
+          alt="logo de girl power for technology"
+        />
+      </div>
+      <!-- TODO: define if we will display this logo -->
+      <!-- <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img src="assets/images/communities/devlat.png" alt="logo de devlat" />
+      </div> -->
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/angular-bolivia.svg"
+          alt="logo de angular bolivia"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img src="assets/images/communities/adevi.svg" alt="logo de adevi" />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/mi-maker-house.svg"
+          alt="logo de mi maker house"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/scesi.svg"
+          alt="logo de la sociedad científica de estudiantes de sistemas e informática"
+        />
+      </div>
+      <div class="valign-wrapper mx-3 mx-sm-6 my-1">
+        <img
+          src="assets/images/communities/teens-in-ai.png"
+          alt="logo de teens in ai"
+        />
+      </div>
     </div>
   </div>
 </div>
