--- a/src/app/home/communities/communities.component.scss
+++ b/src/app/home/communities/communities.component.scss
@@ -1,9 +1,33 @@
-.community-logos {
+.communities {
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 6px solid #98dcd8;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  margin: 50px 0 100px;
+  padding: 50px 0;
+  text-align: center;
 
-  img {
-    max-height: 60px;
+  .title {
+    max-width: 100%;
+    width: 600px;
+  }
+
+  .community-logos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    img {
+      max-height: 80px;
+      max-width: 100%;
+      height: 80px;
+
+      &.organizer-img {
+        max-height: 50px;
+        height: 50px;
+      }
+    }
   }
 }
