--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,10 @@
 <wgj-about-us></wgj-about-us>
 <wgj-participants></wgj-participants>
 <wgj-video></wgj-video>
-<!-- <wgj-communities></wgj-communities> -->
 <!-- <wgj-sponsors></wgj-sponsors> -->
 <!-- <wgj-our-goal></wgj-our-goal> -->
 <wgj-previous-events></wgj-previous-events>
 <!-- <wgj-global-community></wgj-global-community> -->
 <wgj-avatar-generator></wgj-avatar-generator>
+<wgj-communities></wgj-communities>
 <!-- <wgj-social-networks></wgj-social-networks> -->
