--- a/src/app/home/communities/communities.component.scss
+++ b/src/app/home/communities/communities.component.scss
@@ -20,13 +20,13 @@
     justify-content: center;
 
     img {
+      height: 80px;
       max-height: 80px;
       max-width: 100%;
-      height: 80px;
 
       &.organizer-img {
+        height: auto;
         max-height: 50px;
-        height: 50px;
       }
     }
   }
