--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+
+body {
+  background: #45DEFF;
+  font-family: 'Play', sans-serif;
+  font-size: 24px;
+  margin: 0;
+}
