Implemented new design for the 2023 page.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -1,11 +1,40 @@
 <div class="banner">
-  <img class="banner__cloud-1" src="assets/img/cloud.png" alt="nube pixelada" />
-  <img class="banner__cloud-2" src="assets/img/cloud.png" alt="nube pixelada" />
+  <img
+    class="banner__cloud banner__cloud--1"
+    src="assets/img/cloud.png"
+    alt="nube pixelada"
+  />
+  <img
+    class="banner__cloud banner__cloud--2"
+    src="assets/img/cloud.png"
+    alt="nube pixelada"
+  />
   <div class="banner__title-container">
     <img src="assets/img/logo.png" alt="logo de women game jam 2023" />
     <div class="banner__title">
+      <img
+        class="banner__screw banner__screw--1"
+        src="assets/img/screw.png"
+        alt="tornillo"
+      />
+      <img
+        class="banner__screw banner__screw--2"
+        src="assets/img/screw.png"
+        alt="tornillo"
+      />
+      <img
+        class="banner__screw banner__screw--3"
+        src="assets/img/screw.png"
+        alt="tornillo"
+      />
+      <img
+        class="banner__screw banner__screw--4"
+        src="assets/img/screw.png"
+        alt="tornillo"
+      />
       <p>La aventura vuelve a comenzar del 11 al 13 de agosto.</p>
       <p>Desarrolla tu creatividad e imaginación.</p>
+      <wgj-call-to-action></wgj-call-to-action>
     </div>
   </div>
   <img
