--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
 <wgj-banner></wgj-banner>
+<wgj-info></wgj-info>
+<wgj-faq></wgj-faq>
+<wgj-videos></wgj-videos>
+<wgj-communities></wgj-communities>
