--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 
 body {
-  background: #45DEFF;
+  background: #45deff;
   font-family: 'Play', sans-serif;
   font-size: 24px;
   margin: 0;
