Fixed some mobile issues.

--- a/src/app/home/banner/banner.component.html
+++ b/src/app/home/banner/banner.component.html
@@ -10,7 +10,11 @@
     alt="nube pixelada"
   />
   <div class="banner__title-container">
-    <img src="assets/img/logo.png" alt="logo de women game jam 2023" />
+    <img
+      class="banner__title-logo"
+      src="assets/img/logo.png"
+      alt="logo de women game jam 2023"
+    />
     <div class="banner__title">
       <img
         class="banner__screw banner__screw--1"
