--- a/src/app/home/banner/banner.component.scss
+++ b/src/app/home/banner/banner.component.scss
@@ -16,6 +16,10 @@
       padding: 136px 15px 0;
     }
 
+    .banner__title-logo {
+      z-index: 0;
+    }
+
     .banner__title {
       align-items: center;
       background-image: url('/assets/img/title-bg.png');
